(#1) style: update architecture to hexagonal (#3)