@@ -1,53 +1,111 @@
-import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
+import org.apache.tools.ant.taskdefs.condition.Os
 
 plugins {
-    id("org.springframework.boot") version PluginVersions.SPRING_BOOT_VERSION
-    id("io.spring.dependency-management") version PluginVersions.DEPENDENCY_MANAGER_VERSION
     kotlin("jvm") version PluginVersions.JVM_VERSION
-    kotlin("plugin.spring") version PluginVersions.SPRING_PLUGIN_VERSION
-    kotlin("kapt") version PluginVersions.KAPT_VERSION
 }
 
-group = "com.xquare.authorization"
-version = "0.0.1-SNAPSHOT"
-java.sourceCompatibility = JavaVersion.VERSION_17
+subprojects {
+    apply {
+        plugin("org.jetbrains.kotlin.jvm")
+        version = PluginVersions.JVM_VERSION
+    }
 
-configurations {
-    compileOnly {
-        extendsFrom(configurations.annotationProcessor.get())
+    apply {
+        plugin("org.jetbrains.kotlin.kapt")
+        version = PluginVersions.KAPT_VERSION
+    }
+
+    dependencies {
+        implementation(Dependencies.KOTLIN_REFLECT)
+        implementation(Dependencies.KOTLIN_STDLIB)
     }
 }
 
-repositories {
-    mavenCentral()
+allprojects {
+    group = "com.xquare.authorization"
+    version = "0.0.1-SNAPSHOT"
+
+    tasks {
+        compileKotlin {
+            kotlinOptions {
+                freeCompilerArgs = listOf("-Xjsr305=strict")
+                jvmTarget = "17"
+            }
+        }
+
+        compileJava {
+            sourceCompatibility = JavaVersion.VERSION_17.majorVersion
+        }
+
+        test {
+            useJUnitPlatform()
+        }
+    }
+
+    repositories {
+        mavenCentral()
+    }
 }
+
+val ktlint: Configuration by configurations.creating
 
 dependencies {
-    implementation(Dependencies.ACTUATOR)
-    implementation(Dependencies.WEBFLUX)
-    implementation(Dependencies.KOTLIN_JACKSON)
-    implementation(Dependencies.COROUTINE_REACTOR)
-    implementation(Dependencies.COROUTINE_REACTOR_EXTENSION)
-    implementation(Dependencies.KOTLIN_STDLIB)
-    implementation(Dependencies.KOTLIN_REFLECT)
-    implementation(Dependencies.SPRING_VALIDATION)
-    implementation(Dependencies.REACTIVE_JDSL)
-    implementation(Dependencies.REACTIVE_MYSQL)
-    implementation(Dependencies.REACTIVE_HIBERNATE)
-    implementation(Dependencies.MUTINY_KOTLIN)
-    implementation(Dependencies.MUTINY_REACTOR)
-    kapt(Dependencies.CONFIGURATION_PROCESSOR)
-    testImplementation(Dependencies.SPRING_BOOT_TEST)
-    testImplementation(Dependencies.EMBEDDED_MYSQL)
-}
-
-tasks.withType<KotlinCompile> {
-    kotlinOptions {
-        freeCompilerArgs = listOf("-Xjsr305=strict")
-        jvmTarget = "17"
+    ktlint(Dependencies.KTLINT) {
+        attributes {
+            attribute(Bundling.BUNDLING_ATTRIBUTE, objects.named(Bundling.EXTERNAL))
+        }
     }
 }
 
-tasks.withType<Test> {
-    useJUnitPlatform()
+val outputDir = "${project.buildDir}/reports/ktlint/"
+val inputFiles = project.fileTree(mapOf("dir" to "src", "include" to "**/*.kt"))
+
+// Checking lint
+val ktlintCheck by tasks.creating(JavaExec::class) {
+    inputs.files(inputFiles)
+    outputs.dir(outputDir)
+
+    description = "Check Kotlin code style."
+    classpath = ktlint
+    mainClass.set("com.pinterest.ktlint.Main")
+    args = listOf("src/**/*.kt")
+}
+
+// Formatting all source files
+val ktlintFormat by tasks.creating(JavaExec::class) {
+    inputs.files(inputFiles)
+    outputs.dir(outputDir)
+
+    description = "Fix Kotlin code style deviations."
+    classpath = ktlint
+    mainClass.set("com.pinterest.ktlint.Main")
+    args = listOf("-F", "src/**/*.kt")
+    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
+}
+
+val installGitHook by tasks.creating(Copy::class) {
+
+    description = "Install git hook to root project."
+
+    var suffix = "macos"
+    if (Os.isFamily(Os.FAMILY_WINDOWS)) {
+        suffix = "windows"
+    }
+
+    val sourceDir = File(rootProject.rootDir, "pre-build/scripts/ktlint/pre-push-on-$suffix")
+    val targetDir = File(rootProject.rootDir, ".git/hooks")
+
+    from(sourceDir)
+    into(targetDir)
+    rename("pre-push-$suffix", "pre-push")
+
+    fileMode = 0b111101101
+}
+
+project.tasks
+    .getByName("build")
+    .dependsOn(":installGitHook")
+
+tasks.getByName<Jar>("jar") {
+    enabled = false
 }
